--- a/buildroot/local/debug/debug_busybox.conf
+++ b/buildroot/local/debug/debug_busybox.conf
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.20.2
-# Sat Dec  8 06:49:55 2012
+# Mon Dec 17 00:42:59 2012
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -179,7 +179,7 @@ CONFIG_FEATURE_DATE_ISOFMT=y
 # CONFIG_FEATURE_DATE_NANO is not set
 CONFIG_FEATURE_DATE_COMPAT=y
 # CONFIG_HOSTID is not set
-# CONFIG_ID is not set
+CONFIG_ID=y
 # CONFIG_GROUPS is not set
 # CONFIG_TEST is not set
 # CONFIG_FEATURE_TEST_64 is not set
@@ -341,9 +341,9 @@ CONFIG_SETLOGCONS=y
 #
 # CONFIG_MKTEMP is not set
 # CONFIG_PIPE_PROGRESS is not set
-# CONFIG_RUN_PARTS is not set
-# CONFIG_FEATURE_RUN_PARTS_LONG_OPTIONS is not set
-# CONFIG_FEATURE_RUN_PARTS_FANCY is not set
+CONFIG_RUN_PARTS=y
+CONFIG_FEATURE_RUN_PARTS_LONG_OPTIONS=y
+CONFIG_FEATURE_RUN_PARTS_FANCY=y
 CONFIG_START_STOP_DAEMON=y
 CONFIG_FEATURE_START_STOP_DAEMON_FANCY=y
 CONFIG_FEATURE_START_STOP_DAEMON_LONG_OPTIONS=y
@@ -704,7 +704,7 @@ CONFIG_FEATURE_MAKEDEVS_TABLE=y
 # CONFIG_RFKILL is not set
 # CONFIG_RUNLEVEL is not set
 # CONFIG_RX is not set
-# CONFIG_SETSID is not set
+CONFIG_SETSID=y
 # CONFIG_STRINGS is not set
 # CONFIG_TASKSET is not set
 # CONFIG_FEATURE_TASKSET_FANCY is not set
