--- a/buildroot/local/debug/debug_linux.config
+++ b/buildroot/local/debug/debug_linux.config
@@ -37,7 +37,7 @@ CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 CONFIG_LOCALVERSION=""
-CONFIG_LOCALVERSION_AUTO=n
+# CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
 CONFIG_HAVE_KERNEL_LZO=y
@@ -325,7 +325,7 @@ CONFIG_MACH_ARCHOS_A101H=y
 # CONFIG_ARCHOS_UART3_ON_DPDM is not set
 # CONFIG_ARCHOS_HUB_OFF is not set
 # CONFIG_ARCHOS_PHY_POWERSAVE is not set
-CONFIG_CMDLINE_DEFAULT="mem=512M init=/linuxrc debug omapdss.debug=0 omapfb.debug=0"
+CONFIG_CMDLINE_DEFAULT="mem=512M init=/init debug omapdss.debug=0 omapfb.debug=0 console=tty1"
 CONFIG_OMAP_TPS6236X=y
 CONFIG_OMAP_ALLOW_OSWR=y
 CONFIG_OMAP_FIQ_DEBUGGER=y
@@ -2020,7 +2020,7 @@ CONFIG_HDMI_TI_4XXX_IP=y
 # CONFIG_FB_OMAP_BOOTLOADER_INIT is not set
 CONFIG_OMAP2_VRAM=y
 CONFIG_OMAP2_DSS=y
-CONFIG_OMAP2_VRAM_SIZE=0
+CONFIG_OMAP2_VRAM_SIZE=8
 CONFIG_OMAP2_DSS_DEBUG_SUPPORT=y
 # CONFIG_OMAP2_DSS_COLLECT_IRQ_STATS is not set
 CONFIG_OMAP2_DSS_DPI=y
@@ -2062,7 +2062,7 @@ CONFIG_LCD_CLASS_DEVICE=y
 # CONFIG_LCD_LD9040 is not set
 CONFIG_BACKLIGHT_CLASS_DEVICE=y
 # CONFIG_BACKLIGHT_GENERIC is not set
-# CONFIG_BACKLIGHT_PWM is not set
+CONFIG_BACKLIGHT_PWM=y
 # CONFIG_BACKLIGHT_ADP8860 is not set
 # CONFIG_BACKLIGHT_ADP8870 is not set
 # CONFIG_BACKLIGHT_LP855X is not set
@@ -2352,22 +2352,19 @@ CONFIG_USB_GADGET_SELECTED=y
 CONFIG_USB_GADGET_DUALSPEED=y
 # CONFIG_USB_ZERO is not set
 # CONFIG_USB_AUDIO is not set
-CONFIG_USB_ETH=m
-# CONFIG_USB_ETH_RNDIS is not set
-CONFIG_USB_ETH_EEM=y
+# CONFIG_USB_ETH is not set
 # CONFIG_USB_G_NCM is not set
 # CONFIG_USB_GADGETFS is not set
 # CONFIG_USB_FUNCTIONFS is not set
 # CONFIG_USB_FILE_STORAGE is not set
 # CONFIG_USB_MASS_STORAGE is not set
-CONFIG_USB_G_SERIAL=m
+CONFIG_USB_G_SERIAL=y
 # CONFIG_USB_MIDI_GADGET is not set
 # CONFIG_USB_G_PRINTER is not set
-CONFIG_USB_CDC_COMPOSITE=m
+# CONFIG_USB_G_ANDROID is not set
+# CONFIG_USB_CDC_COMPOSITE is not set
 # CONFIG_USB_G_NOKIA is not set
-CONFIG_USB_G_MULTI=m
-CONFIG_USB_G_MULTI_RNDIS=y
-CONFIG_USB_G_MULTI_CDC=y
+# CONFIG_USB_G_MULTI is not set
 # CONFIG_USB_G_HID is not set
 # CONFIG_USB_G_DBGP is not set
 # CONFIG_USB_G_WEBCAM is not set
@@ -2382,7 +2379,7 @@ CONFIG_USB_OTG_WAKELOCK=y
 # CONFIG_TWL4030_USB is not set
 CONFIG_TWL6030_USB=y
 # CONFIG_NOP_USB_XCEIV is not set
-CONFIG_ARCHOS_USB_XCEIV=y
+CONFIG_ARCHOS_USB_XCEIV=m
 CONFIG_ARCHOS_TWL6030_USB_XCEIV=y
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
